--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <style>
 /* Стилі пиши тут :) */
-    
+
 </style>
 <body>
-    <h1>"Світ пончиків"</h1>
+    <h1 style="color:red">Світ пончиків</h1>
     <img src="/uploads/2023/02/donut.png">
 
 </body>
