--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 </style>
 <body>
-    <h1 style="color:red">Світ пончиків</h1>
-    <img src="/uploads/2023/02/donut.png">
-
+    <div style="color:red;  text-align:center">
+        <h1 style="color:red">Світ пончиків</h1>
+        <img src="/uploads/2023/02/donut.png">
+    </div>
 </body>
 </html>
