--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 </style>
 <body>
-    <div style="color:red;  text-align:center">
-        <h1 style="color:red">Світ пончиків</h1>
-        <img src="/uploads/2023/02/donut.png">
-    </div>
+    <h1>"Світ пончиків"</h1>
+    <img src="/uploads/2023/02/donut.png">
+
 </body>
 </html>
